# 2048.c

./: CMakeLists.txt  README.md
include/: game.h  ui.h
src/: game.c  main.c  ui.c
tests/: test_game.c
